@@ -34,9 +34,10 @@ enum GBMemoryBankControllerType {
 	GB_HuC3 = 0x12,
 	GB_POCKETCAM = 0x13,
 	GB_TAMA5 = 0x14,
-	GB_UNL_WISDOM_TREE = 0x20,
 	GB_MBC3_RTC = 0x103,
-	GB_MBC5_RUMBLE = 0x105
+	GB_MBC5_RUMBLE = 0x105,
+	GB_UNL_WISDOM_TREE = 0x200,
+	GB_UNL_PKJD = 0x203,
 };
 
 struct GBSIODriver {
