@@ -50,6 +50,7 @@ OverrideView::OverrideView(ConfigController* config, QWidget* parent)
 		s_mbcList.append(GB_HuC1);
 		s_mbcList.append(GB_HuC3);
 		s_mbcList.append(GB_UNL_WISDOM_TREE);
+		s_mbcList.append(GB_UNL_PKJD);
 	}
 	if (s_gbModelList.isEmpty()) {
 		// NB: Keep in sync with OverrideView.ui
